@@ -2,6 +2,21 @@ import static org.gradle.api.JavaVersion.VERSION_11
 
 buildscript { //properties that you need to build the project
 
+    ext {
+        test_module_opens = [
+                '--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+                '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED'
+        ]
+        test_module_exports = [
+                '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+        ]
+    }
+
     repositories {
         mavenLocal()
         mavenCentral()
@@ -15,6 +30,10 @@ buildscript { //properties that you need to build the project
         classpath "net.corda.plugins:cordformation:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
     }
+}
+
+plugins {
+    id "org.ajoberstar.grgit" version "4.0.0"
 }
 
 // You can define this property in ~/.gradle/gradle.properties on your dev box.
@@ -31,12 +50,24 @@ if (! project.hasProperty('cordaArtifactoryPassword') || !ext.cordaArtifactoryPa
             ?: System.getProperty('corda.artifactory.password')
 }
 
+// If the command line project option -PversionFromGit is added to the gradle invocation, we'll resolve
+// the latest git commit hash and timestamp and create a version postfix from that
+if (project.hasProperty("versionFromGit")) {
+    ext.versionSuffix = "202309-01"
+}
+
+if (ext.versionSuffix != "") {
+    ext.reissuance_version = "${ext.baseVersion}-${ext.versionSuffix}".toString()
+} else {
+    ext.reissuance_version = "${ext.baseVersion}".toString()
+}
+
 allprojects { //Properties that you need to implementation your project (The application)
-    version reissuance_version
-    group reissuance_group
+    version "$reissuance_version"
 
     apply from: "${rootProject.projectDir}/repositories.gradle"
     apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'net.corda.plugins.quasar-utils'
 
     repositories {
         mavenLocal()
@@ -46,7 +77,55 @@ allprojects { //Properties that you need to implementation your project (The app
         maven { url "${publicArtifactURL}/corda" }
         maven { url "${publicArtifactURL}/corda-lib" }
         maven { url "${publicArtifactURL}/corda-dependencies" }
-        maven { url "${publicArtifactURL}/corda-dev" }
+        maven {
+            url "${artifactoryContextUrl}/corda-dev"
+            credentials {
+                username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
+        maven {
+            url "${artifactoryContextUrl}/corda-lib-dev"
+            credentials {
+                username = System.getenv('CORDA_ARTIFACTORY_USERNAME')
+                password = System.getenv('CORDA_ARTIFACTORY_PASSWORD')
+            }
+        }
+    }
+
+    quasar {
+        excludePackages.addAll(
+                "antlr**",
+                "com.codahale**",
+                "com.fasterxml.**",
+                "com.github.benmanes.caffeine.**",
+                "com.google.**",
+                "com.lmax.**",
+                "com.zaxxer.**",
+                "net.bytebuddy**",
+                "io.github.classgraph**",
+                "io.netty*",
+                "liquibase**",
+                "net.i2p.crypto.**",
+                "nonapi.io.github.classgraph.**",
+                "org.apiguardian.**",
+                "org.bouncycastle**",
+                "org.codehaus.**",
+                "org.h2**",
+                "org.hibernate**",
+                "org.jboss.**",
+                "org.objenesis**",
+                "org.w3c.**",
+                "org.xml**",
+                "org.yaml**",
+                "rx**",
+                "kotlin**"
+        )
+    }
+
+    test {
+        jvmArgs test_module_opens
+        jvmArgs test_module_exports
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
@@ -67,8 +146,12 @@ allprojects { //Properties that you need to implementation your project (The app
 
 apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
-apply plugin: 'net.corda.plugins.quasar-utils'
 apply plugin: 'corda.root-publish'
+
+cordapp {
+    targetPlatformVersion corda_platform_version.toInteger()
+    minimumPlatformVersion corda_platform_version.toInteger()
+}
 
 sourceSets {
     main {
@@ -81,7 +164,7 @@ sourceSets {
 //Module dependencis
 dependencies {
     // Corda dependencies.
-    cordaProvided "$corda_core_release_group:corda-core:$corda_core_release_version"
+    cordaProvided "$corda_release_group:corda-core:$corda_release_version"
     cordaRuntimeOnly "$corda_release_group:corda-node-api:$corda_release_version"
     cordaRuntimeOnly "$corda_release_group:corda:$corda_release_version"
 
